Readapted my template

--- a/_my_template/outputs/Raw/t6_esttab_header.tex
+++ b/_my_template/outputs/Raw/t6_esttab_header.tex
@@ -2,22 +2,24 @@
                     &\multicolumn{2}{c}{Number of deaths}       &\multicolumn{2}{c}{Number of divorces}     \\\cmidrule(lr){2-3}\cmidrule(lr){4-5}
                     &\multicolumn{1}{c}{(1)}         &\multicolumn{1}{c}{(2)}         &\multicolumn{1}{c}{(3)}         &\multicolumn{1}{c}{(4)}         \\
 \hline
-Number of marriages &     -0.0849         &                     &       0.260\sym{***}&       0.190\sym{**} \\
-                    &    (0.0520)         &                     &    (0.0597)         &    (0.0593)         \\
+Number of marriages &     -0.0849         &                     &       0.260\sym{**} &       0.190\sym{*}  \\
+                    &    (0.0718)         &                     &     (0.125)         &     (0.105)         \\
 [1em]
-Population          &     0.00949\sym{***}&                     &     0.00271\sym{***}&     0.00342\sym{***}\\
-                    &  (0.000497)         &                     &  (0.000571)         &  (0.000572)         \\
+Population          &     0.00949\sym{***}&                     &     0.00271\sym{**} &     0.00342\sym{***}\\
+                    &  (0.000838)         &                     &   (0.00129)         &   (0.00104)         \\
 [1em]
 Urban population    &                     &     0.00992\sym{***}&                     &                     \\
-                    &                     &  (0.000347)         &                     &                     \\
+                    &                     &  (0.000871)         &                     &                     \\
 [1em]
 Constant            &       650.9         &      6464.6\sym{***}&      -963.3         &     -7786.2\sym{**} \\
-                    &    (1347.4)         &    (1819.7)         &    (1547.9)         &    (2591.7)         \\
+                    &    (1503.9)         &    (2215.2)         &    (1376.2)         &    (3212.9)         \\
 \hline
 Observations        &          50         &          50         &          50         &          50         \\
 Region fixed effects&          No         &          No         &          No         &         Yes         \\
 \hline\hline
-\multicolumn{5}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{5}{l}{\footnotesize \sym{*} \(p<0.05\), \sym{**} \(p<0.01\), \sym{***} \(p<0.001\)}\\
+\multicolumn{5}{l}{\footnotesize Robust standard errors in parentheses}\\
+\multicolumn{5}{l}{\footnotesize Add a note here.}\\
+\multicolumn{5}{l}{\footnotesize Other custom note here.}\\
+\multicolumn{5}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
