--- a/_my_template/outputs/Raw/t9_threeparttable.tex
+++ b/_my_template/outputs/Raw/t9_threeparttable.tex
@@ -7,10 +7,10 @@
 Car type (1 = foreign)&    312.3         &   2774.0\sym{***}&        0         \\
                 &  (754.4)         &  (772.1)         &      (.)         \\
 [1em]
-Constant        &   6072.4\sym{***}& -11500.2\sym{**} &  -1632.1         \\
+Constant        &   6072.4\sym{***}& -11500.2\sym{***}&  -1632.1         \\
                 &  (411.4)         & (3472.3)         & (2896.7)         \\
 \hline
 Observations    &       74         &       74         &       74         \\
 Model controls  &       No         &      Yes         &      Yes         \\
 Make fixed effects&       No         &       No         &      Yes         \\
-\hline\hline \end{tabular}} \begin{tablenotes} \footnotesize \item \lipsum[1] \end{tablenotes}
+\hline\hline \end{tabular}} \begin{tablenotes} \footnotesize \item Hi, this is my note. bbla bla bla  \end{tablenotes}
