--- a/_my_template/outputs/Raw/t12_narrow3parttable.tex
+++ b/_my_template/outputs/Raw/t12_narrow3parttable.tex
@@ -7,7 +7,7 @@
 Car type (1 = foreign)&    312.3         &   2774.0\sym{***}&        0         &    312.3         &   2774.0\sym{***}&        0         \\
                 &  (754.4)         &  (772.1)         &      (.)         &  (754.4)         &  (772.1)         &      (.)         \\
 [1em]
-Constant        &   6072.4\sym{***}& -11500.2\sym{**} &  -1632.1         &   6072.4\sym{***}& -11500.2\sym{**} &  -1632.1         \\
+Constant        &   6072.4\sym{***}& -11500.2\sym{***}&  -1632.1         &   6072.4\sym{***}& -11500.2\sym{***}&  -1632.1         \\
                 &  (411.4)         & (3472.3)         & (2896.7)         &  (411.4)         & (3472.3)         & (2896.7)         \\
 \hline
 Observations    &       74         &       74         &       74         &       74         &       74         &       74         \\
