--- a/_my_template/outputs/Raw/t5_esttab_titles.tex
+++ b/_my_template/outputs/Raw/t5_esttab_titles.tex
@@ -5,24 +5,24 @@
                     &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}\\
                     &\multicolumn{1}{c}{Title 1}&\multicolumn{1}{c}{Title 2}&\multicolumn{1}{c}{Title 3}&\multicolumn{1}{c}{Title 4}\\
 \hline
-Number of marriages &     -0.0849         &                     &       0.260\sym{***}&       0.190\sym{**} \\
-                    &    (0.0520)         &                     &    (0.0597)         &    (0.0593)         \\
+Number of marriages &     -0.0849         &                     &      0.2600\sym{**} &      0.1898\sym{*}  \\
+                    &    (0.0718)         &                     &    (0.1255)         &    (0.1046)         \\
 [1em]
-Population          &     0.00949\sym{***}&                     &     0.00271\sym{***}&     0.00342\sym{***}\\
-                    &  (0.000497)         &                     &  (0.000571)         &  (0.000572)         \\
+Population          &      0.0095\sym{***}&                     &      0.0027\sym{**} &      0.0034\sym{***}\\
+                    &    (0.0008)         &                     &    (0.0013)         &    (0.0010)         \\
 [1em]
-Urban population    &                     &     0.00992\sym{***}&                     &                     \\
-                    &                     &  (0.000347)         &                     &                     \\
+Urban population    &                     &      0.0099\sym{***}&                     &                     \\
+                    &                     &    (0.0009)         &                     &                     \\
 [1em]
-Constant            &       650.9         &      6464.6\sym{***}&      -963.3         &     -7786.2\sym{**} \\
-                    &    (1347.4)         &    (1819.7)         &    (1547.9)         &    (2591.7)         \\
+Constant            &    650.9261         &  6,464.6317\sym{***}&   -963.3429         & -7,786.1667\sym{**} \\
+                    &(1,503.9391)         &(2,215.2140)         &(1,376.2314)         &(3,212.9482)         \\
 \hline
 Observations        &          50         &          50         &          50         &          50         \\
 Region controls     &          No         &          No         &          No         &         Yes         \\
 \hline\hline
-\multicolumn{5}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{5}{l}{\footnotesize Robust standard errors in parentheses}\\
 \multicolumn{5}{l}{\footnotesize Add a note here.}\\
 \multicolumn{5}{l}{\footnotesize Other custom note here.}\\
-\multicolumn{5}{l}{\footnotesize \sym{*} \(p<0.05\), \sym{**} \(p<0.01\), \sym{***} \(p<0.001\)}\\
+\multicolumn{5}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
